Filled in user login and editing functions. - Fixed a number of small bugs that caused the server to fail on startup. - Basic user operations have been implemented (add, edit, signin, password reset). Profile pictures and user autobiographies have not. - Completed email module (theoretically). Not yet tested as Gmail does not allow third party apps to use it to send emails. - A special process exists for creating the first user account. - Defined a static Admin role (id:0) which has special properties. The first user will be assigned the role. Only admins can assign the role to other accounts and edit accounts with said role. - Created a safeguard to prevent the last admin from being removed/deactivated. Actions violating this rule will fail. - Privileges are enforced within the user functions, though dynamic role definitions (any non-admin role) have not been implemented yet. - Added a helpers file to the server. Contains very simple and methods to avoid code duplication across multiple files. - Added basic table control. Not complete.

--- a/server/config.json
+++ b/server/config.json
@@ -2,20 +2,21 @@
   "config": {
     "base_url": "http://localhost:5000/",
     "server_port": 5000,
-    "session_timeout": 24
+    "session_timeout": 24,
+    "secret": "pending"
   },
   "db": {
     "host": "localhost",
-    "user": "root",
-    "password": "",
+    "user": "sr_user",
+    "password": "pending",
     "database": "summit_reviews"
   },
   "email": {
-    "host": "",
+    "host": "gmail",
     "port": 465,
     "auth": {
-      "user": "pending@email.com",
-      "pass": "pending"
+      "user": "ngushurst@gmail.com",
+      "pass": "Bravery&&Cruelty"
     }
   },
   "file_store": {
@@ -26,6 +27,8 @@
   },
   "log": {
     "level": "info",
-    "path": "./logs/SR.log"
+    "path": "./logs/SR.log",
+    "rotation_period": "1d",
+    "retain": 5
   }
 }
